--- a/src/app/components/edit-contact-modal/edit-contact-modal.component.html
+++ b/src/app/components/edit-contact-modal/edit-contact-modal.component.html
@@ -1,19 +1,19 @@
 
     <div class="modal-header">
-      <h4 class="modal-title pull-left">{{ evento }} novo contato</h4>
+      <h4 class="modal-title pull-left">{{ title }} novo contato</h4>
     </div>
     <div class="modal-body">
         <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" class="form-control" id="nomeInput" [(ngModel)]="person.name"  >
+            <input type="text" class="form-control" id="nameInput" [(ngModel)]="contact.name"  >
         </div>
         <div class="form-group">
             <label for="email">E-mail</label>
-            <input type="email" class="form-control" id="emailInput" [(ngModel)]="person.email">
+            <input type="email" class="form-control" id="emailInput" [(ngModel)]="contact.email">
           </div>
           <div class="form-group w-50">
             <label for="telefone">Telefone</label>
-            <input type="telefone" class="form-control" id="telefoneInput" [(ngModel)]="person.telefone">
+            <input type="telefone" class="form-control" id="telefoneInput" [(ngModel)]="contact.telefone">
           </div>
     </div>
     <div class="modal-footer">
