style(style.css): ajustes nos css dos modais

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,40 @@
 
 body {
     --salmon: #fa7268;
+    --grey: #e4e7f4;
     background-color: #f8f9fd;
     margin: 16px;
+}
+
+.modal-content {
+    padding: 16px 0;
+    border-radius: 16px;
+    box-shadow: 0 16px 10px 0 rgba(0, 0, 0, 0.16);
+}
+
+.confirm-button {
+    width: 72px;
+    height: 32px;
+    margin: 15px 16px 0;
+    border-radius: 16px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
+    border: solid 1px rgba(255, 255, 255, 0.16);
+    background-color: var(--salmon);
+    color: #fff;
+}
+
+.cancel-button {
+    color: var(--salmon);
+    background-color: #fff;
+    width: 72px;
+    height: 32px;
+    margin: 15px 16px 0;
+    font-size: 14px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    border: none;
 }
