--- a/src/app/components/edit-contact-modal/edit-contact-modal.component.css
+++ b/src/app/components/edit-contact-modal/edit-contact-modal.component.css
@@ -1,10 +1,3 @@
-.rectangle-copy {
-    width: 72px;
-    height: 32px;
-    margin: 15px 16px 0;
-    padding: 8px 16px;
-    border-radius: 16px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
-    border: solid 1px rgba(255, 255, 255, 0.16);
-    background-color: var(--salmon);
+  button:disabled {
+    background-color: #fed2cf;
   }
