--- a/src/app/components/edit-contact-modal/edit-contact-modal.component.html
+++ b/src/app/components/edit-contact-modal/edit-contact-modal.component.html
@@ -1,24 +1,25 @@
 
-    <div class="modal-header">
-      <h4 class="modal-title pull-left">{{ title }} novo contato</h4>
+<div class="modal-header">
+  <h4 class="modal-title pull-left">{{ title }} contato</h4>
+</div>
+<div class="modal-body">
+    <div class="form-group">
+        <label for="nameInput">Nome</label>
+        <input type="text" class="form-control" id="nameInput" [(ngModel)]="contact.name"  >
     </div>
-    <div class="modal-body">
-        <div class="form-group">
-            <label for="nome">Nome</label>
-            <input type="text" class="form-control" id="nameInput" [(ngModel)]="contact.name"  >
-        </div>
-        <div class="form-group">
-            <label for="email">E-mail</label>
-            <input type="email" class="form-control" id="emailInput" [(ngModel)]="contact.email">
-          </div>
-          <div class="form-group w-50">
-            <label for="telefone">Telefone</label>
-            <input type="telefone" class="form-control" id="telefoneInput" [(ngModel)]="contact.telefone">
-          </div>
-    </div>
-    <div class="modal-footer">
-        <button (click)="close()">Cancelar</button>
-        <button class="btn-primary rectangle-copy" (click)="save()">Salvar</button>
-    </div>
+    <div class="form-group">
+        <label for="emailInput">E-mail</label>
+        <input type="email" class="form-control" id="emailInput" [(ngModel)]="contact.email">
+      </div>
+      <div class="form-group w-50">
+        <label for="phoneInput">Telefone</label>
+        <input type="text" class="form-control" id="phoneInput" maxlength="11" [(ngModel)]="contact.phone" >
+      </div>
+</div>
+<div class="modal-footer">
+    <button class="cancel-button" (click)="editContactModal.dismiss()">Cancelar</button>
+    <button class="confirm-button" [disabled]="!saveIsValid()" (click)="save()">Salvar</button>
+</div>
+
 
   
