--- a/src/app/components/list-contact/list-contact.component.html
+++ b/src/app/components/list-contact/list-contact.component.html
@@ -1,25 +1,40 @@
-<table class="table">
+<table class="table" *ngIf="contactList.length; else contact">
     <thead>
       <tr>
-        <th scope="col">Contatos</th>
-        <th scope="col">E-mail</th>
-        <th scope="col">Telefone</th>
-        <th scope="col"></th>
+        <th class="column-contact">Contatos</th>
+        <th>E-mail</th>
+        <th>Telefone</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let contact of contactList">
-        <td>{{contact.name}}</td>
-        <td>{{contact.email}}</td>
-        <td>{{contact.telefone}}</td>
-        <td>
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil action" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <td scope="row">
+          <div class="d-flex">
+            <div class="circle" [ngStyle]="{'background-color': contact.imageColor}">
+              <p>{{contact.name.substring(0,1).toUpperCase()}}</p>
+            </div>
+            <p class="contact-name">{{contact.name}}</p>
+          </div>
+        </td>
+        <td scope="row" class="">{{contact.email}}</td>
+        <td scope="row" class="">{{contact.phone}}</td>
+        <td scope="row" class="">
+            <svg (click)="edit(contact)" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil action" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
             </svg>
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill action" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <svg (click)="exclude(contact)"width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill action" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
             </svg>
         </td>
       </tr>
     </tbody>
   </table>
+
+  <ng-template #contact>
+    <div class="d-flex flex-column align-items-center">
+        <img src="../assets/shedule.svg" alt="Agenda" width="200" height="237">
+        <p>Nenhum contato foi criado ainda.</p>
+        <app-new-contact-button (saveContact)="refresh()"></app-new-contact-button>
+    </div>
+  </ng-template>
