--- a/src/app/components/edit-contact-modal/edit-contact-modal.component.html
+++ b/src/app/components/edit-contact-modal/edit-contact-modal.component.html
@@ -5,19 +5,19 @@
 <div class="modal-body">
     <div class="form-group">
         <label for="nameInput">Nome</label>
-        <input type="text" class="form-control" id="nameInput" [(ngModel)]="contact.name"  >
+        <input type="text" class="form-control" id="nameInput" [(ngModel)]="contact.name" maxlength="50" >
     </div>
     <div class="form-group">
         <label for="emailInput">E-mail</label>
-        <input type="email" class="form-control" id="emailInput" [(ngModel)]="contact.email">
+        <input type="email" class="form-control" id="emailInput" [(ngModel)]="contact.email" maxlength="50">
       </div>
       <div class="form-group w-50">
         <label for="phoneInput">Telefone</label>
-        <input type="text" class="form-control" id="phoneInput" maxlength="11" [(ngModel)]="contact.phone" >
+        <input type="text" class="form-control" id="phoneInput" [mask]="'(00) 00000-0000'" maxlength="15" [(ngModel)]="contact.phone" >
       </div>
 </div>
 <div class="modal-footer">
-    <button class="cancel-button" (click)="editContactModal.dismiss()">Cancelar</button>
+    <button class="cancel-button" (click)="editContactModal.close()">Cancelar</button>
     <button class="confirm-button" [disabled]="!saveIsValid()" (click)="save()">Salvar</button>
 </div>
 
