--- a/src/app/components/list-contact/list-contact.component.html
+++ b/src/app/components/list-contact/list-contact.component.html
@@ -1,4 +1,4 @@
-<table class="table" *ngIf="contactList.length; else contact">
+<table class="table" *ngIf="contactList.length; else contactNoResult">
     <thead>
       <tr>
         <th class="column-contact">Contatos</th>
@@ -17,9 +17,9 @@
             <p class="contact-name">{{contact.name}}</p>
           </div>
         </td>
-        <td scope="row" class="">{{contact.email}}</td>
-        <td scope="row" class="">{{contact.phone}}</td>
-        <td scope="row" class="">
+        <td scope="row" >{{contact.email}}</td>
+        <td scope="row" >{{contact.phone | mask:"(00) 00000-0000"}}</td>
+        <td scope="row" class="text-right">
             <svg (click)="edit(contact)" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil action" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
             </svg>
@@ -31,7 +31,7 @@
     </tbody>
   </table>
 
-  <ng-template #contact>
+  <ng-template #contactNoResult>
     <div class="d-flex flex-column align-items-center">
         <img src="../assets/shedule.svg" alt="Agenda" width="200" height="237">
         <p>Nenhum contato foi criado ainda.</p>
