--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,6 @@
-<header>
-  <div class="row">
-    <div class="col">
-      <img src="../assets/logo.svg" width="148" height="32" alt="logo ubook" />
-    </div>
-    <div class="col-2" >
-      <app-new-contact-button (saveContact)="listContact.refresh()"></app-new-contact-button>
-    </div>
-
-    <div class="col-8">
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Buscar..." [(ngModel)]="searchParam" (keyup.enter)="search()"/>
-        <div class="input-group-append">
-          <span class="input-group-text" id="basic-addon2">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-              <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-            </svg>
-          </span>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+<app-header
+  (searchEmitter)="listContact.search($event)"
+  (refreshEmitter)="listContact.refresh()"
+></app-header>
 
 <app-list-contact #listContact></app-list-contact>
