--- a/src/app/components/list-contact/list-contact.component.css
+++ b/src/app/components/list-contact/list-contact.component.css
@@ -19,7 +19,7 @@ th {
     border-radius: 50%;
     background-color: red;
     width: 24px;
-    height: 24px;
+    height: 22px;
     text-align: center;
     color: #fff;
     margin-right: 5px;
@@ -33,7 +33,7 @@ svg {
     padding-left: 3%;
 }
 
-tr:hover{
+tr:hover,.new-contact {
     background-color: #fff3f2;
     cursor: pointer;
 }
