--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 body {
     --salmon: #fa7268;
     --grey: #e4e7f4;
     background-color: #f8f9fd;
     margin: 16px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .modal-content {
